Video 6 - Convolutional Layer

--- a/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj
+++ b/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj
@@ -132,6 +132,8 @@
     <ClInclude Include="Optimizer.h" />
     <ClInclude Include="Output.h" />
     <ClInclude Include="RNG.h" />
+    <ClInclude Include="Utils\Convolution.h" />
+    <ClInclude Include="Utils\MaxAverage.h" />
     <ClInclude Include="Utils\Random.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
