--- a/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj.filters
+++ b/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj.filters
@@ -68,5 +68,11 @@
     <ClInclude Include="Utils\Random.h">
       <Filter>Header Files\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Utils\MaxAverage.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\Convolution.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
