--- a/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj.filters
+++ b/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj.filters
@@ -74,5 +74,26 @@
     <ClInclude Include="Utils\Convolution.h">
       <Filter>Header Files\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Activation\Identity.h">
+      <Filter>Header Files\Activation</Filter>
+    </ClInclude>
+    <ClInclude Include="Activation\ReLU.h">
+      <Filter>Header Files\Activation</Filter>
+    </ClInclude>
+    <ClInclude Include="Activation\Sigmoid.h">
+      <Filter>Header Files\Activation</Filter>
+    </ClInclude>
+    <ClInclude Include="Activation\Tanh.h">
+      <Filter>Header Files\Activation</Filter>
+    </ClInclude>
+    <ClInclude Include="Activation\Softmax.h">
+      <Filter>Header Files\Activation</Filter>
+    </ClInclude>
+    <ClInclude Include="Output\MSE.h">
+      <Filter>Header Files\Output</Filter>
+    </ClInclude>
+    <ClInclude Include="Output\CrossEntropy.h">
+      <Filter>Header Files\Output</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
