--- a/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj
+++ b/DeepNeuralNetwork/DeepNeuralNetwork/DeepNeuralNetwork.vcxproj
@@ -135,6 +135,16 @@
     <ClInclude Include="Layer\Pooling.h" />
     <ClInclude Include="NeuralNet.h" />
     <ClInclude Include="Optimizer.h" />
+    <ClInclude Include="Optimizer\AdaDelta.h" />
+    <ClInclude Include="Optimizer\AdaGrad.h" />
+    <ClInclude Include="Optimizer\Adam.h" />
+    <ClInclude Include="Optimizer\AdaMAX.h" />
+    <ClInclude Include="Optimizer\AMSGrad.h" />
+    <ClInclude Include="Optimizer\Momentum.h" />
+    <ClInclude Include="Optimizer\Nadam.h" />
+    <ClInclude Include="Optimizer\NAG.h" />
+    <ClInclude Include="Optimizer\RMSProp.h" />
+    <ClInclude Include="Optimizer\SGD.h" />
     <ClInclude Include="Output.h" />
     <ClInclude Include="Output\CrossEntropy.h" />
     <ClInclude Include="Output\MSE.h" />
